# Garden-E-Cutters

./: .gitignore  CEN4707C-Watermelon-Project-Description.docx  README.md
FakeZedESP/: todo.md
FakeZedESP/firmware/: Fake-ZED-F9P.c  how2.txt  i2c_protocol.h
FakeZedESP/src/: codeexplanation.md  create_data.py
FakeZedESP/tests/: test_create_data.py
PCB-SPECS/Stacking-Interface-BoardRTK/: #auto_saved_files#  ERC1.rpt  ERC2.rpt  ERC3.rpt  ExtraJustInCaseStacking-Interface-BoardRTK.kicad_pcb  ExtraJustInCaseStacking-Interface-BoardRTK.kicad_pro  Stacking-Interface-BoardRTK.kicad_pcb  Stacking-Interface-BoardRTK.kicad_prl  Stacking-Interface-BoardRTK.kicad_pro  Stacking-Interface-BoardRTK.kicad_sch  Stacking-Interface-BoardRTK.kicad_sch-bak  fabrication-toolkit-options.json  fp-info-cache  fp-lib-table  freerouting.dsn  temp-freerouting.dsn  ~Stacking-Interface-BoardRTK.kicad_pcb.lck  ~Stacking-Interface-BoardRTK.kicad_sch.lck
SolidWorks/base/: lid.SLDPRT
SolidWorks/rover/: box.SLDPRT  box.STL  lid.SLDPRT  lid.STL
base-ble-fw/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
base-ble-fw/main/: CMakeLists.txt  base_ble.c  base_ble.h  base_led.c  base_led.h  base_uartFileTransfer.c  base_uartFileTransfer.h  csv_debug_button.c  csv_debug_button.h  log_transfer_client.c  log_transfer_client.h  main.c  uart_bridge.c  uart_bridge.h
base-data-fw/: app.py  config.py  database.py  requirements.txt  uart_receiver.py  watermelon-hub.service  watermelon_hub.db
base-data-fw/static/: app.js  index.html  style.css
base-fw/: CMakeLists.txt  README.md  partitions.csv
base-fw/main/: CMakeLists.txt  UART_README.md  app_main.c  base_ble.c  base_ble.h  base_led.c  base_led.h  base_uartFileTransfer.c  base_uartFileTransfer.h  csv_debug_button.c  csv_debug_button.h  log_transfer_client.c  log_transfer_client.h  main.c
base-rpi-fw/: app.py  base-app.service  config.py  database.py  download_tiles.py  requirements.txt  setup_ap.sh  start_app.sh  start_network.sh  uart_receiver.py  watermelon-hub.service  watermelon_hub.db
base-rpi-fw/received_files/: gps_points_20260219_162624.csv  (+24 more)
logs/: README.md
rpi-base-fw/: CMakeLists.txt  README.md
shears-fw/: CMakeLists.txt  README.md  partitions.csv
shears-fw/main/: CMakeLists.txt  app_main.c  gps_logger.c  gps_logger.h  log_transfer_server.c  log_transfer_server.h  main.c  shears_7segment.c  shears_7segment.h  shears_ble.c  shears_ble.h  shears_gpsButtons.c  shears_gpsButtons.h  shears_gpsStorage.c  shears_gpsStorage.h  shears_led.c  shears_led.h  shears_piezo.c  shears_piezo.h  shears_primeSwitch.c  shears_primeSwitch.h  shears_spiffs.c  shears_spiffs.h
watermelonHub/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  setup.sh
watermelonHub/main/: CMakeLists.txt  base_ble.c  base_led.h  hub_controller.cpp  hub_controller.h  interfaces.h  log_transfer_client.c  log_transfer_client.h  main.cpp
web-ui/: app.js  index.html  style.css
(+79 files in other folders)
