idf_component_register(
    SRCS
        "main.c"
        "shears_led.c"
        "shears_ble.c"
        "shears_piezo.c"
        "shears_primeSwitch.c"
        "shears_gpsButtons.c"
        "shears_spiffs.c"
        "shears_gpsStorage.c"
        "gps_logger.c"
        "log_transfer_server.c"
        "shears_7segment.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        log_transfer
        bt
        esp_driver_ledc
        esp_driver_gpio
        esp_driver_uart
        spiffs
        nvs_flash
)